🏥 v1.0 Production Release: Multi-Label Chest X-Ray Pathology Detection System
## 🔬 Major Refactoring
- Migrated from monolithic notebook to modular Python package (src/)
- Implemented production-grade architecture with strict separation of concerns

## 🛡️ Safety & Integrity Features
- Added Schema Enforcement (schema.py) for fail-fast inference validation
- Implemented Patient-Aware Splitting to prevent data leakage
- Created WeightedBCELoss (loss.py) for class imbalance mitigation

## 📊 Metrics & Evaluation
- Built ClinicalMetricContainer (metrics.py) with AUROC, Bootstrap CI, Calibration
- Added ErrorSlicer (analysis.py) for qualitative failure analysis
- Created ablation.py for controlled augmentation experiments

## 📄 Documentation
- Added SCIENTIFIC_PAPER.md: Comprehensive technical documentation with STAR analysis
- Added MODEL_CARD.md: Ethical guidelines and usage boundaries
- Added DATASET_CARD.md: Data provenance and schema contract
- Updated README.md with hybrid cloud workflow

## 🧹 Cleanup
- Removed obsolete files (visual.py, ReadME.docx, pretrained_model.h5)
- Updated .gitignore for production (excludes binaries, generated reports)
- Removed test artifacts (ablation_report.md, calibration_data.csv)

## 🏗️ New Core Modules
- inference.py: Production single-image diagnostic engine
- evaluate.py: Full test set evaluation with CI and error slicing
- Training.ipynb: Colab driver notebook for cloud GPU training

Engineered by Antigravity & User (Technical PM)

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,39 @@
+# Python
 __pycache__/
 *.pyc
+*.pyo
+*.egg-info/
+.eggs/
+*.egg
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
 .DS_Store
-images-224/
+Thumbs.db
 ~$*
+
+# Large Data (Do not commit)
+images-224/
+src/Data_Entry_2017.csv
+
+# Model Binaries (Stored externally)
+output/*.pth
+output/*.h5
+*.pth
+*.h5
+
+# Generated Reports (Regeneratable)
+ablation_report.md
+calibration_data.csv
+error_analysis_report.md
+error_gallery.png
+ablation_results/
+test_env/
+
+# Jupyter
+.ipynb_checkpoints/
